log
Thu 16 May 2024 03:41:20 PM UTC: 
 tests:  0|5
total_score: 0/70
455cebe
Thu 16 May 2024 04:02:31 PM UTC: 
 sudoku.c | 32 ++++++++++++++++++--------------
 1 file changed, 18 insertions(+), 14 deletions(-)
 tests:  2|4
total_score: 15/70
ba4c201
Thu 16 May 2024 04:21:49 PM UTC: 
 sudoku.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
   47 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
38009e6
